objects/Title_Review_Document__c.object
<CustomObject>
    <description>A list of DMV documents associated with a Title, which will be reviewed by ACV clerk.</description>
    <fields>
        <fullName>Document_URI__c</fullName>
        <description>S3 Document URL</description>
        <inlineHelpText>S3 Document URL</inlineHelpText>
        <label>Document URI</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Title_Review__c</fullName>
        <description>This document is related to the Title Review.</description>
        <inlineHelpText>This document is related to the Title Review.</inlineHelpText>
        <label>Title Review</label>
        <referenceTo>Title_Review__c</referenceTo>
        <relationshipLabel>Title Review Documents</relationshipLabel>
        <relationshipName>Title_Review_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who uploaded the document.</description>
        <inlineHelpText>User who uploaded the document.</inlineHelpText>
        <label>User Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Title Review Documents</relationshipLabel>
        <relationshipName>Title_Review_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Title Review Document</label>
    <nameField>
        <label>Title Review Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Title Review Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>